--- a/bmw.html
+++ b/bmw.html
@@ -57,13 +57,13 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/home/CL1.jpg" class="d-block w-100" alt="...">
+                    <img src="img/bmw/cars/C7_SLIDER.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/home/CL2.jpg" class="d-block w-100" alt="...">
+                    <img src="img/bmw/cars/C8_SLIDER.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/home/CL3.jpg" class="d-block w-100" alt="...">
+                    <img src="img/bmw/cars/C9_SLIDER.png" class="d-block w-100" alt="...">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -84,14 +84,14 @@
         <!-- INICIO DOS CARDS DE PROMOÇÃO -->
         <br>
         <br>
-        <h1 id="promoCar">
+        <h1 id="title">
             Veiculos em promoção
         </h1>
         <br>
         <br>
         <div class="card-group">
             <div class="card">
-                <img src="img/bmw/promoCar/C1_CARD.png" class="card-img-top" alt="...">
+                <img src="img/bmw/cars/C1_CARD-CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
                         BMW Série 1 Hatch
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/bmw/promoCar/C2_CARD.png" class="card-img-top" alt="...">
+                <img src="img/bmw/cars/C2_CARD-CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
                         BMW Série 2 Active Tourer
@@ -131,7 +131,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="img/bmw/promoCar/C3_CARD.png" class="card-img-top" alt="...">
+                <img src="img/bmw/cars/C3_CARD-CATALOGO.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">
                         BMW Série 3 Sedã
@@ -156,138 +156,152 @@
         <!-- COMEÇO DO CATÁLAGO TODO -->
         <br>
         <br>
-        <h1>
-            Catálago:
+        <h1 id="title">
+            Catálogo:
         </h1>
         <br>
         <br>
         <div class="card-group">
-                <div class="card">
-                    <img src="img/bmw/promoCar/C1_CARD.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            BMW Série 1 Hatch
-                        </h5>
-                        <p class="card-text">
-                            BMW Série 1, um veículo ágil e compacto com uma aparência esportiva
-                            e moderna. A dianteira exibe um novo design, que inclui a grade em 
-                            forma de rim característica da BMW e os elegantes faróis LED. A 
-                            traseira apresenta os cativantes faróis em forma de L e o interior 
-                            ergonômico proporciona inúmeras possibilidades de organização. 
-                        </p>
-                        <p class="card-text">
-                            <small class="text-muted">
-                                A partir de R$ 165.950,00 à vista
-                            </small>
-                        </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/bmw/promoCar/C2_CARD.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            BMW Série 2 Active Tourer
-                        </h5>
-                        <p class="card-text">
-                            O BMW Série 2 Active Tourer comprova que as dimensões compactas,
-                            a funcionalidade e a diversidade podem ser perfeitamente combinadas
-                            em um design dinâmico. Esse veículo está preparado para enfrentar
-                            qualquer situação, quer sejam atividades esportivas ou no dia a dia.
-                        </p>
-                        <br>
-                        <p class="card-text">
-                            <small class="text-muted">
-                                A partir de R$ 171.950,00 à vista
-                            </small>
-                        </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="img/bmw/promoCar/C3_CARD.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            BMW Série 3 Sedã
-                        </h5>
-                        <p class="card-text">
-                            Nem bem caiu na estrada o novo BMW Série 3 já está deixando tudo para 
-                            trás, incluindo convenções e expectativas. Mais uma vez o ícone mostra 
-                            como reinventar a si mesmo. Afinal de contas, com a linguagem de design
-                            pioneira, ele representa o alvorecer de uma nova era. Impulsionando o
-                            verdadeiro sedã esportivo há motores ainda mais potentes and eficientes.
-                        </p>
-                        <p class="card-text">
-                            <small class="text-muted">
-                                A partir de R$ 219.950,00 à vista
-                            </small>
-                        </p>
-                    </div>
+            <div class="card">
+                <img src="img/bmw/cars/C1_CARD-CATALOGO.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        BMW Série 1 Hatch
+                    </h5>
+                    <p class="card-text">
+                        BMW Série 1, um veículo ágil e compacto com uma aparência esportiva
+                        e moderna. A dianteira exibe um novo design, que inclui a grade em 
+                        forma de rim característica da BMW e os elegantes faróis LED. A 
+                        traseira apresenta os cativantes faróis em forma de L e o interior 
+                        ergonômico proporciona inúmeras possibilidades de organização. 
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            A partir de R$ 165.950,00 à vista
+                        </small>
+                    </p>
                 </div>
             </div>
-            <div class="card-group">
-                    <div class="card">
-                        <img src="img/bmw/promoCar/C1_CARD.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                BMW Série 1 Hatch
-                            </h5>
-                            <p class="card-text">
-                                BMW Série 1, um veículo ágil e compacto com uma aparência esportiva
-                                e moderna. A dianteira exibe um novo design, que inclui a grade em 
-                                forma de rim característica da BMW e os elegantes faróis LED. A 
-                                traseira apresenta os cativantes faróis em forma de L e o interior 
-                                ergonômico proporciona inúmeras possibilidades de organização. 
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted">
-                                    A partir de R$ 165.950,00 à vista
-                                </small>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="img/bmw/promoCar/C2_CARD.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                BMW Série 2 Active Tourer
-                            </h5>
-                            <p class="card-text">
-                                O BMW Série 2 Active Tourer comprova que as dimensões compactas,
-                                a funcionalidade e a diversidade podem ser perfeitamente combinadas
-                                em um design dinâmico. Esse veículo está preparado para enfrentar
-                                qualquer situação, quer sejam atividades esportivas ou no dia a dia.
-                            </p>
-                            <br>
-                            <p class="card-text">
-                                <small class="text-muted">
-                                    A partir de R$ 171.950,00 à vista
-                                </small>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="img/bmw/promoCar/C3_CARD.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                BMW Série 3 Sedã
-                            </h5>
-                            <p class="card-text">
-                                Nem bem caiu na estrada o novo BMW Série 3 já está deixando tudo para 
-                                trás, incluindo convenções e expectativas. Mais uma vez o ícone mostra 
-                                como reinventar a si mesmo. Afinal de contas, com a linguagem de design
-                                pioneira, ele representa o alvorecer de uma nova era. Impulsionando o
-                                verdadeiro sedã esportivo há motores ainda mais potentes and eficientes.
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted">
-                                    A partir de R$ 219.950,00 à vista
-                                </small>
-                            </p>
-                        </div>
-                    </div>
+            <div class="card">
+                <img src="img/bmw/cars/C2_CARD-CATALOGO.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        BMW Série 2 Active Tourer
+                    </h5>
+                    <p class="card-text">
+                        O BMW Série 2 Active Tourer comprova que as dimensões compactas,
+                        a funcionalidade e a diversidade podem ser perfeitamente combinadas
+                        em um design dinâmico. Esse veículo está preparado para enfrentar
+                        qualquer situação, quer sejam atividades esportivas ou no dia a dia.
+                    </p>
+                    <br>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            A partir de R$ 171.950,00 à vista
+                        </small>
+                    </p>
                 </div>
+            </div>
+            <div class="card">
+                <img src="img/bmw/cars/C3_CARD-CATALOGO.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        BMW Série 3 Sedã
+                    </h5>
+                    <p class="card-text">
+                        Nem bem caiu na estrada o novo BMW Série 3 já está deixando tudo para 
+                        trás, incluindo convenções e expectativas. Mais uma vez o ícone mostra 
+                        como reinventar a si mesmo. Afinal de contas, com a linguagem de design
+                        pioneira, ele representa o alvorecer de uma nova era. Impulsionando o
+                        verdadeiro sedã esportivo há motores ainda mais potentes and eficientes.
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            A partir de R$ 219.950,00 à vista
+                        </small>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="card-group">
+            <div class="card">
+                <img src="img/bmw/cars/C4_CATALOGO.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        BMW Série 4 Cabrio
+                    </h5>
+                    <p class="card-text">
+                        Com a capota rígida recolhida ou fechada, o BMW Série 4 Cabrio está 
+                        pronto para surpreender o mundo. O design esportivo atrai todos os 
+                        olhares. O motor equipado com tecnologias BMW TwinPower Turbo 
+                        intensificam a sensação de agilidade. Os recursos do BMW ConnectedDrive 
+                        elevam o nível de conforto e intensificam a experiência de condução 
+                        única proporcionada pelo BMW Série 4 Cabrio.
+                    </p>
+                    <br>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            A partir de R$ 311.950,00 à vista
+                        </small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/bmw/cars/C5_CATALOGO.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        BMW Série 5 Sedã
+                    </h5>
+                    <p class="card-text">
+                        O BMW Série 5 é a personificação do sedã executivo. Graças à sua 
+                        imagem dinâmica e elegante, o BMW Série 5 cumpre de forma 
+                        absolutamente convincente todas as exigências de um veículo da 
+                        sua categoria: estética esportiva e Prazer de Dirigir com tecnologia 
+                        de ponta.
+                    </p>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            A partir de R$ 318.950,00 à vista
+                        </small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/bmw/cars/C6_CATALOGO.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        BMW 8 Series Coupé
+                    </h5>
+                    <p class="card-text">
+                        O esportivo de luxo definitivo - o interior moderno e purista do 
+                        novo BMW Série 8 Coupé prova que os contrastes podem complementar-se
+                        de forma perfeita. Materiais de alta qualidade, tecnologias 
+                        inovadoras e inúmeras variações de cores e equipamentos garantem 
+                        uma atmosfera luxuosa e uma aparência de alta qualidade, apesar 
+                        do caráter esportivo característico. Os elegantes elementos e as 
+                        linhas de design claras dirigem-se apenas numa direção: para a frente.
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            A partir de R$ 799.950 à vista
+                        </small>
+                    </p>
+                </div>
+            </div>
+        </div>
                 
         <!-- FIM DO CATÁLAGO TODO -->
-
+        <br>
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+              <h1 class="display-4">BMW</h1>
+              <p class="lead">Tudo que você precisa está aqui, performace, estilo e segurança.</p>
+            </div>
+          </div>
         <!-- INICIO DO RODAPÉ -->
         <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai">
             <br>
@@ -306,36 +320,29 @@
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a href="promocoes.html">
-                                Promoções
+                            <a href="bmw.html">
+                                BMW
                             </a>
                         </h6>
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a href="luxo.html">
-                                Luxo
+                            <a href="mercedes.html">
+                                Mercedes
                             </a>
                         </h6>
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a href="populares.html">
-                                Populares
+                            <a href="tesla.html">
+                                Tesla
                             </a>
                         </h6>
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a id="contato" href="#contato">
+                            <a id="contato" href="contato.html">
                                 Contato
-                            </a>
-                        </h6>
-                    </div>
-                    <div class="col-md-2 mb-3">
-                        <h6 class="text-uppercase font-weight-bold">
-                            <a href="orcamento.html">
-                                Orçamento
                             </a>
                         </h6>
                     </div>
@@ -346,7 +353,7 @@
                         <p style="line-height: 1.7rem">
                             A Eagle's Car atende você com toda a satisfação e prazer, 
                             pois nós trabalhamos com qualidade de serviço, atendimento
-                            e suporte ao usuário. Dedicação total, para que você sai 
+                            e suporte ao usuário. Dedicação total, para que você sair 
                             com um carro que atenda as suas necessidades.
                         </p>
                     </div>
