--- a/index.html
+++ b/index.html
@@ -163,13 +163,6 @@
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a href="tesla.html">
-                                Tesla
-                            </a>
-                        </h6>
-                    </div>
-                    <div class="col-md-2 mb-3">
-                        <h6 class="text-uppercase font-weight-bold">
                             <a href="mercedes.html">
                                 Mercedes
                             </a>
@@ -177,15 +170,15 @@
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a id="contato" href="#contato">
-                                Contato
+                            <a href="tesla.html">
+                                Tesla
                             </a>
                         </h6>
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a href="orcamento.html">
-                                Orçamento
+                            <a id="contato" href="contato.html">
+                                Contato
                             </a>
                         </h6>
                     </div>
@@ -196,7 +189,7 @@
                         <p style="line-height: 1.7rem">
                             A Eagle's Car atende você com toda a satisfação e prazer, 
                             pois nós trabalhamos com qualidade de serviço, atendimento
-                            e suporte ao usuário. Dedicação total, para que você sai 
+                            e suporte ao usuário. Dedicação total, para que você sair 
                             com um carro que atenda as suas necessidades.
                         </p>
                     </div>
