--- a/tesla.html
+++ b/tesla.html
@@ -99,36 +99,29 @@
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a href="promocoes.html">
-                                Promoções
+                            <a href="bmw.html">
+                                BMW
                             </a>
                         </h6>
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a href="luxo.html">
-                                Luxo
+                            <a href="mercedes.html">
+                                Mercedes
                             </a>
                         </h6>
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a href="populares.html">
-                                Populares
+                            <a href="tesla.html">
+                                Tesla
                             </a>
                         </h6>
                     </div>
                     <div class="col-md-2 mb-3">
                         <h6 class="text-uppercase font-weight-bold">
-                            <a id="contato" href="#contato">
+                            <a id="contato" href="contato.html">
                                 Contato
-                            </a>
-                        </h6>
-                    </div>
-                    <div class="col-md-2 mb-3">
-                        <h6 class="text-uppercase font-weight-bold">
-                            <a href="orcamento.html">
-                                Orçamento
                             </a>
                         </h6>
                     </div>
@@ -139,7 +132,7 @@
                         <p style="line-height: 1.7rem">
                             A Eagle's Car atende você com toda a satisfação e prazer, 
                             pois nós trabalhamos com qualidade de serviço, atendimento
-                            e suporte ao usuário. Dedicação total, para que você sai 
+                            e suporte ao usuário. Dedicação total, para que você sair 
                             com um carro que atenda as suas necessidades.
                         </p>
                     </div>
