--- a/contato.html
+++ b/contato.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="description" content="Venha comprar na melhor loja de automoveis do século XXI"/>
-        <link rel="stylesheet" type="text/css" href="css/style.css"/>
+        <meta name="keywords" content="Eagles' Car, Eagleas Car, Carros, Tesla, BMW, Mercedes" />
+        <title>Contato</title>
+        <link rel="shortcut icon" href="img/menu_pag/logoContato.png" type="image/x-icon"/>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-        <!-- Link para converter a imagem .PNG para .ICO : https://www.convertico.com/ -->
-        <link rel="shortcut icon" href="img/menu_pag/favicon.ico" type="image/x-icon"/>
-        <title>Eagle's Car</title>
+        <link rel="stylesheet" type="text/css" href="css/contato.css"/>
     </head>
     <body>
-<<<<<<< HEAD
         <!-- INICIO DO MENU DA PÁGINA -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
             <div class="container-fluid">
@@ -39,28 +38,33 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contato">
+                            <a class="nav-link" href="contato.html">
                                 <img src="img/menu_pag/logoContato.png" style="width: 30px; margin-right: 10px;" title="Contato"/>
                             </a>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="orcamento.html">
-                                <img src="img/menu_pag/logoOrcamento.png" style="width: 30px; margin-right: 10px;" title="Orçamento"/>
-                            </a>
-                        </li> -->
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- FIM DO MENU DA PÁGINA -->
+
+        <div class="container" id="formulario">
+            <h1>
+                Fale conosco
+            </h1>
+            <form class="form-group" action="mailto:desenvolvimentosistemas2019@gmail.com" method="POST">
+                <input class="form-control" type="text" name="nome" id="nome" placeholder=" Nome" maxlength="20" size="15" required/>
+                <input class="form-control" type="text" name="sobrenome" id="sobrenome" placeholder=" Sobrenome" maxlength="20" size="15" required/>
+                <input class="form-control" type="email" name="email" id="email" placeholder=" E-mail" size="30" required/>
+                <input class="form-control" type="tel" name="telefone" id="telefone" placeholder=" Telefone">
+                <textarea name="msg" id="msg" placeholder="Digite sua mensagem aqui..." rols="50" cols="30"></textarea>
+                <br>
+                <button class="btn btn-primary" type="submit">Enviar</button>
+            </form>
+        </div>
         
         <!-- INICIO DO RODAPÉ -->
-        <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+        <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai;">
             <div class="container">
                 <div class="row text-center d-flex justify-content-center pt-5 mb-3">
                     <div class="col-md-2 mb-3">
@@ -119,9 +123,8 @@
             </div>
         </footer>
         <!-- FIM DO RODAPÉ -->
-        <script type="text/javascript" src="js/jquery.slim.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/popper.min.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
     </body>
+    <script type="text/javascript" src="js/jquery.slim.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/popper.min.js"></script>
 </html>
