--- a/tesla.html
+++ b/tesla.html
@@ -4,11 +4,10 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="description" content="Venha comprar na melhor loja de automoveis do século XXI"/>
-        <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-        <!-- Link para converter a imagem .PNG para .ICO : https://www.convertico.com/ -->
+        <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <link rel="shortcut icon" href="img/menu_pag/favicon.ico" type="image/x-icon"/>
-        <title>Eagle's Car</title>
+        <title>Eagle's Car - Tesla</title>
     </head>
     <body>
         <!-- INICIO DO MENU DA PÁGINA -->
@@ -38,15 +37,10 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contato">
+                            <a class="nav-link" href="contato.html">
                                 <img src="img/menu_pag/logoContato.png" style="width: 30px; margin-right: 10px;" title="Contato"/>
                             </a>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="orcamento.html">
-                                <img src="img/menu_pag/logoOrcamento.png" style="width: 30px; margin-right: 10px;" title="Orçamento"/>
-                            </a>
-                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -83,11 +77,6 @@
 
         <!-- INICIO DO RODAPÉ -->
         <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
             <div class="container">
                 <div class="row text-center d-flex justify-content-center pt-5 mb-3">
                     <div class="col-md-2 mb-3">
@@ -149,6 +138,5 @@
         <script type="text/javascript" src="js/jquery.slim.min.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/popper.min.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
